fix alignment

--- a/src-client/scss/modules/game-preferences.scss
+++ b/src-client/scss/modules/game-preferences.scss
@@ -50,8 +50,8 @@
 {
     left: 15%;
     width: 70%;
-    top: 20%;
-    max-height: 70%;
+    top: 10%;
+    max-height: 80%;
     text-align: center;
 }
 #dices-panel-content p { color: var(--color-white); }
